tests/negative/gold/super2_test.gold
tests/negative/super2_test.toit:8:5: error: Only one super call at the top-level of a constructor is allowed
    super
    ^~~~~
tests/negative/super2_test.toit:9:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
Compilation failed.
